[metadata]
name = osc_ppl
version = 0.0.1
author = OSC
author_email = support@osc.no
description = A ready-made logger.
long_description = file: README.md
long_description_content_type = text/markdown
#url = https://bitbucket.org/offsim/proper_python_logger
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src